// This is the public API offered by your entity.
syntax = "proto3";

import "app/improving/common/common_api.proto";
import "google/protobuf/timestamp.proto";
import "kalix/annotations.proto";

package app.improving.storecontext.store;

enum ApiStoreStatus {
    DRAFT = 0;
    OPEN = 2;
    CLOSED = 3;
    UNKNOWN = 5;
}

message ApiStoreInfo {
    string store_id = 1 [(kalix.field).entity_key = true];
    string  name = 2;
    string  description = 3;
    repeated ApiProductId products = 4;
    ApiEventId  event = 5;
}

message ApiStoreMetaInfo {
    string store_id = 1 [(kalix.field).entity_key = true];
    ApiMemberId createdBy = 2;
    google.protobuf.Timestamp createdOn = 3;
    ApiMemberId lastModifiedBy = 4;
    google.protobuf.Timestamp lastModifiedOn = 5;
    ApiStoreStatus status = 6;
}

message ApiStore {
    string store_id = 1 [(kalix.field).entity_key = true];
    ApiStoreInfo info = 2;
    ApiStoreMetaInfo meta = 3;
    ApiStoreStatus status = 4;
}

message ApiCreateStore {
    string store_id = 1 [(kalix.field).entity_key = true];
}
message ApiUpdateStore {
    string store_id = 1 [(kalix.field).entity_key = true];
}
message ApiDeleteStore {
    string store_id = 1 [(kalix.field).entity_key = true];
}
message ApiOpenStore {
    string store_id = 1 [(kalix.field).entity_key = true];
}
message ApiCloseStore {
    string store_id = 1 [(kalix.field).entity_key = true];
}
message ApiAddProductToStore {
    string store_id = 1 [(kalix.field).entity_key = true];
}
message ApiRemoveProductFromStore {}
message ApiIncrementProductInventory {
    string store_id = 1 [(kalix.field).entity_key = true];
}
message ApiDecrementProductInventory {
    string store_id = 1 [(kalix.field).entity_key = true];
}
message ApiGetStoreInfo {
    string store_id = 1 [(kalix.field).entity_key = true];
}